. fix search input in ie 9 not align center

--- a/src/main/webapp/less/ContentView.less
+++ b/src/main/webapp/less/ContentView.less
@@ -32,6 +32,7 @@
       input {
         width: 100%;
         height: 100%;
+        line-height: 26px;
         background: #F0F0F0;
         border-radius: 5px;
         border-width: 2px;
